--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
     "lint": "vue-cli-service lint",
     "dist": "vue-cli-service build --target lib --name maucash-model ./src/components/*"
   },
+  "main": "./dist/maucash-model.umd.min.js",
+  "keywords": [
+    "vue",
+    "model",
+    "maucash"
+  ],
+  "homepage": "https://github.com/kuangshp/maucash-model",
+  "author": "kuangshp@126.com",
+  "license": "MIT",
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
@@ -45,5 +54,8 @@
       "vue-cli-service lint",
       "git add"
     ]
-  }
+  },
+  "files": [
+    "dist/**/*"
+  ]
 }
