--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maucash-test2",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -58,6 +58,7 @@
     ]
   },
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "types/*"
   ]
 }
