--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "maucash-test2",
-  "version": "0.1.1",
+  "name": "maucash-model",
+  "version": "0.1.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
